# colorfulstring

./: README.md  pyproject.toml
src/colorfulstring/: __init__.py  core.py
