[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colorfulstring"
version = "0.0.2"
dependencies = []
requires-python = ">=3.13"
authors = [
  {name = "Chitaoji", email = "2360742040@qq.com"},
]
maintainers = [
  {name = "Chitaoji", email = "2360742040@qq.com"}
]
description = "Make colorful strings."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["config"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13"
]

[project.urls]
Documentation = "https://github.com/Chitaoji/colorfulstring/blob/main/README.md"
Repository = "https://github.com/Chitaoji/colorfulstring/"

